--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Monkeywrench</title>
+    <title>Test Project</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/THoisington/monkeywrench">View on GitHub</a>
 
-          <h1 id="project_title">Monkeywrench</h1>
+          <h1 id="project_title">Test Project</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
